# rust-lambda-poc

./: Cargo.toml  Makefile  event.json  template.yaml
code/adapters/: Cargo.toml
code/adapters/src/repositories/: mod.rs  s3_storage_repository.rs
code/applications/lambda/: Cargo.toml
code/applications/lambda/src/hello-world/: main.rs
code/core/: Cargo.toml
code/core/src/: lib.rs
code/core/src/repositories/: storage_repository.rs
code/core/src/use_cases/: hello_world_use_case.rs
